--- a/ClientApp/src/assets/map/1_2.qmd
+++ b/ClientApp/src/assets/map/1_2.qmd
@@ -32,7 +32,7 @@
     </spatialrefsys>
   </crs>
   <extent>
-    <spatial minz="0" miny="0" minx="0" maxy="0" maxz="0" dimensions="2" crs="" maxx="0"/>
+    <spatial dimensions="2" maxz="0" minx="0" crs="" maxy="0" miny="0" minz="0" maxx="0"/>
     <temporal>
       <period>
         <start></start>
